<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.govardhan.wearpracticeconnection.LoginPageMain">

  <android.support.v7.widget.LinearLayoutCompat
      android:layout_width="368dp"
      android:layout_height="495dp"
      android:orientation="vertical"
      tools:layout_editor_absoluteY="8dp"
      tools:layout_editor_absoluteX="8dp">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:src="@drawable/moodlogo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

      <android.support.design.widget.TextInputEditText
          android:id="@+id/textInputEditTextName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_name"
          android:inputType="text"
          android:maxLines="1"
          android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

      <android.support.design.widget.TextInputEditText
          android:id="@+id/textInputEditTextAge"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_age"
          android:inputType="number"
          android:maxLines="1"
          android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

      <android.support.design.widget.TextInputEditText
          android:id="@+id/textInputEditTextGender"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="Gender"
          android:inputType="text"
          android:maxLines="1"
          android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/colorTextHint"
        android:text="@string/text_start" />

  </android.support.v7.widget.LinearLayoutCompat>

</RelativeLayout>