<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:weightSum="1">

        <pl.droidsonroids.gif.GifTextView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/heart"
            android:id="@+id/gifTextView" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="300dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">



            <TableLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:stretchColumns="0">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1">

                                <EditText
                                    android:id="@+id/current_Heart_Rate"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/edit_current_heart_rate"
                                    android:layout_weight="1"
                                    android:inputType="none"
                                    android:textIsSelectable="true"/>
                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1">

                                <EditText
                                    android:id="@+id/current_Heart_Rate_Time_Stamp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/edit_date_time"
                                    android:layout_weight="1"
                                    android:inputType="none"
                                    android:textIsSelectable="true"/>
                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>

                    </android.support.design.widget.TextInputLayout>

                </TableRow>




                <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                        <EditText
                            android:id="@+id/highest_heart_rate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/edit_highest_heart_rate"
                            android:layout_weight="1"
                            android:inputType="none"
                            android:textIsSelectable="true"/>
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                        <EditText
                            android:id="@+id/highest_Heart_Rate_time_stamp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/edit_date_time"
                            android:layout_weight="1"
                            android:inputType="none"
                            android:textIsSelectable="true"/>
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                </android.support.design.widget.TextInputLayout>

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1">

                                <EditText
                                    android:id="@+id/lowest_haert_rate"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/edit_lowest_heart_rate"
                                    android:layout_weight="1"
                                    android:inputType="none"
                                    android:textIsSelectable="true"/>
                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1">

                                <EditText
                                    android:id="@+id/lowest_heart_rate_time_stamp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/edit_date_time"
                                    android:layout_weight="1"
                                    android:inputType="none"
                                    android:textIsSelectable="true"/>
                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>

                    </android.support.design.widget.TextInputLayout>

                </TableRow>

            </TableLayout>



    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>